# Scoliosis_patients_detection

./: .gitignore  README.md
RK3399_Android/: README.md  config.json
RK3399_Android/MNN/: local.properties  settings.gradle
RK3399_Android/MNN/app/: build.gradle
RK3399_Android/MNN/app/src/main/: AndroidManifest.xml
RK3399_Android/MNN/app/src/main/java/org/jwyao/mnnpose/: BootReceiver.java  MainActivity.java  PersonDetector.java  PoseEstimator.java
RK3399_Android/MNN/app/src/main/java/org/jwyao/mnnpose/mnn/: MNNForwardType.java  MNNImageProcess.java  MNNNetInstance.java  MNNNetNative.java
RK3399_Android/MNN/app/src/main/jni/: CMakeLists.txt  mnnnetnative.cpp
RK3399_Android/MNN/app/src/main/res/layout/: activity_main.xml
RK3399_Android/MNN/app/src/main/res/layout-land/: activity_main.xml
RK3399_Android/MNN/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
RK3399_Android/MNN/gradle/wrapper/: gradle-wrapper.properties
RK3399_Android/adb/: 命令提示符.lnk
demo/: coco_demo.py  coco_demo_config.yaml  mpii_demo.py  mpii_demo_config.yaml  video_demo.py
experiments/coco/hrnet/: w32_256x192_adam_lr1e-3.yaml
experiments/mpii/hrnet/: w32_256x256_adam_lr1e-3.yaml
lib/config/: default.py  models.py
lib/core/: evaluate.py  function.py  inference.py  loss.py
lib/dataset/: JointsDataset.py  coco.py  mpii.py
lib/models/: __init__.py  pose_hrnet.py  pose_resnet.py
lib/nms/: nms.py
lib/utils/: transforms.py  utils.py  vis.py  zipreader.py
tools/: model2onnx.py  onnx_sim.py  test.py  train.py
